chinese model work

--- a/sherpa_ort/CMakeLists.txt
+++ b/sherpa_ort/CMakeLists.txt
@@ -1,5 +1,4 @@
-add_executable(online-fbank-test online-fbank-test.cc)
-target_link_libraries(online-fbank-test kaldiio)
+file(GLOB SRCS *.cc *h)
 
-add_executable(sherpa-onnx main.cpp)
+add_executable(sherpa-onnx main.cpp ${SRCS})
 target_link_libraries(sherpa-onnx onnxruntime kaldiio)
